# cosmic-hotspot

./: Cargo.toml  README.md  justfile
resources/: applet-settings.json  cosmic-hotspot-nat  io.github.reality2_roycdavies.cosmic-hotspot.desktop  io.github.reality2_roycdavies.cosmic-hotspot.policy
src/: applet.rs  config.rs  hotspot.rs  lib.rs  main.rs  settings.rs  settings_cli.rs  settings_page.rs
